# nitor

./: CMakeLists.txt  README.md
build_scripts/: build_examples.sh
examples/: CMakeLists.txt  clock.cpp
examples/shaders/: flatColoredFragmentShader.glsl  flatColoredVertexShader.glsl  flatTexturedFragmentShader.glsl  flatTexturedVertexShader.glsl  lightFragmentShader.glsl  litFragmentShader.glsl  litModelFragmentShader.glsl  litModelVertexShader.glsl  skyboxFragmentShader.glsl  skyboxVertexShader.glsl  textFragmentShader.glsl  textVertexShader.glsl
include/: nitor.hpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Elements.cpp  Elements.hpp  Error.cpp  Error.hpp  Init.cpp  Lib.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Text.cpp  Text.hpp  Vertices.hpp  Window.cpp  glad.c  glad.h  structure
